[FIX] Minor changes in button size(broken in Firefox).

--- a/addons/openerp/static/css/screen.css
+++ b/addons/openerp/static/css/screen.css
@@ -2118,7 +2118,7 @@ div.action-buttons div.pager {
     white-space: nowrap;
     font-size: 1em;
     font-weight: bold;
-    line-height: 18px;
+    line-height: 19px;
     text-shadow: #6a6969 0 1px 0;
 }
 
